# commcoach

./: ANDROID_V2_EMBEDDING_FIX.md  CPP_INTELLISENSE_EXPLANATION.md  FIXES_APPLIED.md  NDK_AND_DEVELOPER_MODE_FIX.md  PROJECT_OVERVIEW.md  README.md  TROUBLESHOOTING.md  alembic.ini  deploy-supabase.ps1  railway.toml  structure2
app/: main.py
app/core/: db.py  settings.py
app/routers/: progress.py
app/services/: feedback_service.py  internet_service.py  llm_service.py  persona_service.py  stt_service.py
backend/: .gitignore  Dockerfile  LICENSE  SUPABASE_DEPLOYMENT_GUIDE.md  alembic.ini  deploy-supabase.sh  docker-compose.supabase.yml  docker-compose.yml  docker.env  env.example  requirements.txt  structure  supabase-config.md
backend/app/: main.py
backend/app/core/: settings.py
backend/app/models/: models.py
backend/app/routers/: debate_config.py  feedback.py  history.py  internet.py  realtime.py  stt.py  tts.py
backend/app/services/: feedback_service.py  llm_service.py  session_sm.py  storage.py
backend/backend/: env.example  requirements.txt
backend/backend/app/routers/: debate_config.py  deps_supabase.py  feedback.py  health.py  personas.py
backend/backend/app/services/: progress_service.py  tts_service.py
backend/backend/migrations/: env.py
backend/backend/migrations/versions/: 001_add_user_progress.py
backend/frontend/: .flutter-plugins-dependencies
backend/frontend/.dart_tool/: package_graph.json
backend/frontend/linux/: CMakeLists.txt  my_application.cc
backend/frontend/web/: index.html
backend/frontend/windows/: CMakeLists.txt
backend/migrations/: env.py
frontend/: .flutter-plugins-dependencies  README.md  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_graph.json
frontend/.dart_tool/dartpad/: web_plugin_registrant.dart
frontend/.dart_tool/extension_discovery/: vs_code.json
frontend/android/app/: build.gradle.kts
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/ios/Runner/: GeneratedPluginRegistrant.m
frontend/lib/: app.dart  main.dart
frontend/lib/services/: api_service.dart  supabase_service.dart  voice_service.dart
frontend/lib/state/: api_providers.dart  auth_providers.dart
frontend/lib/theme/: theme.dart
frontend/lib/utils/: accessibility.dart  constants.dart
frontend/lib/widgets/: badge_grid.dart  custom_text_field.dart  loading_button.dart  message_bubble.dart  mic_button.dart  mode_card.dart  persona_card.dart  progress_badge.dart  score_card.dart  session_history_card.dart  stats_card.dart  streak_widget.dart  timer_widget.dart  tips_list.dart  waveform_widget.dart  xp_progress_bar.dart
frontend/linux/: my_application.h
frontend/macos/Runner/: Info.plist
frontend/test/: widget_test.dart
frontend/web/: manifest.json
frontend/windows/runner/: app.rc  flutter_window.cpp  main.cpp  win32_window.cpp  win32_window.h
supabase/functions/commcoach-backend/: index.ts
tests/: test_feedback.py  test_flow.py
(+13 files in other folders)
